# crypton

./: .coveragerc  .gitignore  .pylintrc  LICENSE-APACHE  LICENSE-MIT  MANIFEST.in  README.md  pyproject.toml  setup.py
crypton/: __init__.py  crypton.py  types.py
crypton/api/: __init__.py  cryptocompare.py
crypton/config/: config.toml
crypton/datasource/: cryptocompare.py
crypton/predictor/: __init__.py  base.py  keras.py  prophet.py
